...
        label.text(localized("CreditCard.field.securityCode"))
        configure(label)
        return label
    }()
    
    // fields
    private lazy var cardNumberTextField: CardNumberTextField = {
        let tf = CardNumberTextField()
        tf.rightView = cardBrandImageView
        configure(tf)
        tf.setAccessibilityID("CreditCardForm.cardNumberTextField")
        tf.onValueChanged = { [weak self] in
            guard let self = self else { return }
...
            self.cardBrandImageView.image = icon.flatMap { UIImage(omise: $0) }
            cardNumberTextField.rightViewMode = self.cardBrandImageView.image != nil ? .always : .never
        }
        return tf
    }()
    
    private lazy var nameTextField: CardNameTextField = {
        let tf = CardNameTextField()
        tf.validator = try? NSRegularExpression(pattern: "\\A[\\w\\s]{1,50}\\s?\\z", options: [])
        tf.setAccessibilityID("CreditCardForm.nameTextField")
        configure(tf)
        return tf
    }()
    
    private lazy var expiryDateTextField: CardExpiryDateTextField = {
        let tf = CardExpiryDateTextField()
        tf.placeholder = localized("CreditCard.field.mmyy.placeholder")
        tf.setAccessibilityID("CreditCardForm.expiryDateTextField")
        configure(tf)
        return tf
    }()
    
    private lazy var cvvTextField: CardCVVTextField = {
        let tf = CardCVVTextField()
        tf.setAccessibilityID("CreditCardForm.cvvTextField")
        tf.rightView = infoButton
        tf.rightViewMode = .always
        configure(tf)
        return tf
...
        let label = UILabel()
        label.text("CreditCard.field.email".localized())
        configure(label)
        return label
    }()
    
    private lazy var emailTextField: EmailTextField = {
        let tf = EmailTextField()
        tf.setAccessibilityID("CreditCardForm.emailTextField")
        configure(tf)
        return tf
    }()
    
...
        let label = UILabel()
        label.text("CreditCard.field.phone".localized())
        configure(label)
        return label
    }()
    
    private lazy var phoneTextField: PhoneNumberTextField = {
        let tf = PhoneNumberTextField()
        tf.setAccessibilityID("CreditCardForm.phoneTextField")
        tf.phoneDelegate = self
        configure(tf)
        return tf
    }()
...
        label.text = "-"
        label.setAccessibilityID("CreditCardForm.phoneError")
        configureError(label)
        return label
    }()
    
    private lazy var submitButton: MainActionButton = {
        let button = MainActionButton()
        configure(button)
        button.setTitle(localized("CreditCard.payButton.title"), for: .normal)
        button.addTarget(self, action: #selector(submitCardForm(_:)), for: .touchUpInside)
        button.setAccessibilityID("CreditCardForm.submitButton")
        return button
...
