...

        // Main view identifier
        view.accessibilityIdentifier = "mainView"

        // Button identifiers
        choosePaymentButton.accessibilityIdentifier = "choosePaymentButton"
        creditCardButton.accessibilityIdentifier = "creditCardPaymentButton"
        authorizeButton.accessibilityIdentifier = "authorizeButton"

        // Summary view identifiers
        amountLabel.accessibilityIdentifier = "amountLabel"
        currencyLabel.accessibilityIdentifier = "currencyLabel"
        paymentMethodsLabel.accessibilityIdentifier = "paymentMethodsLabel"
...
